<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Remote</string>
    <string name="control_your_tv">Control Your TV</string>
    <string name="devices">Devices</string>
    <string name="cast_content_from_phone_to_your_tv">Cast content from phone to your TV.</string>
    <string name="my_remote">MY REMOTE</string>
    <string name="add_now">ADD NOW</string>
    <string name="tv_remote_control_by_mobile">TV Remote Control by Mobile</string>
    <string name="start">START</string>
    <string name="cast_screen">CAST Screen</string>
    <string name="choose_the_type_of_your_tv_remote">Choose the type of your TV remote</string>
    <string name="ir_tv_remote">IR TV Remote</string>
    <string name="smart_tv_remote">Smart TV Remote</string>
    <string name="i_don_t_know">I do not know</string>
    <string name="control_tv_via_ir">Control TV via IR</string>
    <string name="control_tv_via_wi_fi">Control TV via Wi-Fi</string>>
    <string name="your_phone_needs_to_have_a_n_built_in_ir_infrared_blaster">Your phone needs to have a \n built-in IR (infrared blaster).</string>
    <string name="your_tv_and_phone_need_to_be_n_on_the_same_wifi_network">Your TV and phone need to be \n on the same WiFi network.</string>
    <string name="start_now">START NOW</string>
    <string name="select_tv_brand">Select TV Brand</string>
    <string name="we_ve_found_5_remote_n_controls_for_your_acer_tv">We\'ve found %d remote \n controls for your TV.</string>
    <string name="please_test_them_one_by_one_to_find_the_remote_that_matches_your_tv_model">Please test them one by one to find the remote that matches your TV model.</string>
    <string name="start_testing">START TESTING</string>
    <string name="tap_the_buttons_below_to_test_if_the_tv_responds_correctly">Tap the buttons below to test if the TV responds correctly</string>
    <string name="test_acer_remote">Test TV remote</string>
    <string name="does_your_tv_respond">Does your TV respond?</string>
    <string name="xiaomi_tv_connected">Xiaomi TV connected!</string>
    <string name="save_the_remote">Save the remote</string>
    <string name="the_remote_is_now_connected_to_your_tv_please_save_it_for_future_use">The remote is now connected to your TV.\n Please save it for future use.</string>
    <string name="name_your_remote">Name your remote</string>
    <string name="rb_default">Default</string>
    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="dinning_room">Dinning room</string>
    <string name="media_room">Media room</string>
    <string name="tv_location">TV location</string>
    <string name="icon_color">Icon Color</string>
    <string name="save">SAVE</string>
    <string name="tv_style_preview">TV style preview</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="language_options">Language Options</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="like_this_app_please_rate_us">Like this app? Please rate us!</string>
    <string name="share_tv_remote_control_with_your_friends">Share TV Remote Control with your friends</string>
    <string name="tell_us_the_problem_n_you_encountered">Tell us the problem \n you encountered</string>
    <string name="what_s_your_tv_brand">What\'s your TV brand*</string>
    <string name="please_select_your_tv_brand">Please select your TV brand</string>
    <string name="what_s_your_problem">What\'s your problem*</string>
    <string name="select_the_problem">Select the problem</string>
    <string name="please_select_your_problem">Please select your problem</string>
    <string name="more_details">More details</string>
    <string name="we_can_locate_and_solve_your_problem_faster">Please tell us more details so that we can locate and solve your problem faster</string>
    <string name="submit">SUBMIT</string>
    <string name="your_phone_needs_to_have">Your phone needs to have</string>
    <string name="built_in_ir_infrared_blaster">built-in IR (infrared blaster).</string>
    <string name="your_tv_and_phone_need_to_be">Your TV and phone need to be</string>
    <string name="on_the_same_wifi_network">on the same WiFi network.</string>
    <string name="tv_brands">TV brands</string>
    <string name="there_is_no_built_in_infrared">There is no built-in infrared blaster in your phone,so you can\'t control TV via IR</string>
    <string name="try_wifi_remote">TRY WIFI REMOTE</string>
    <string name="s_tv_connected">%s TV connected</string>
    <string name="the_name_change_has_already_been_used">The name change has already been used</string>
    <string name="we_are_working_hard_for">We are working hard for a better user experience. We\'d greatly appreciate if you can rate us.</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="rate">RATE</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image_nonline">Image\nonline</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="completely_duplicate_the_content_displayed_on_the_phone_screen">Completely duplicate the content displayed on the phone screen.</string>
    <string name="select_device">Select device</string>
    <string name="please_make_sure">Please make sure:</string>
    <string name="turn_off_the_vpn_on_your_phone_if_it_s_connected">1. Turn on TV.\n2. Connect to same Wi-Fi on your phone and TV.\n3. Turn off the VPN on your phone if it\'s connected.</string>
    <string name="searching_device">Searching device</string>
    <string name="to_display_the_wi_fi_name_please_allow_location_access_in_settings">To display the Wi-Fi name, please allow Location access in Settings.</string>
    <string name="current_wi_fi">Current Wi-Fi:</string>
    <string name="not_working_at_all">Not working at all</string>
    <string name="some_buttons_are_not_responding">Some buttons are not responding</string>
    <string name="can_t_connect_to_tv">Can\'t connect to TV</string>
    <string name="others">Others</string>
    <string name="please_enter_feedback">Please enter feedback</string>
    <string name="please_input_remote_name">please input remote name</string>
    <string name="please_grant_permission">Please grant permission</string>
    <string name="network_connected">Network connected</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="no_network">No Network</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="make_sure_your_phone_and_tv_or_wireless_adapter_connect_to_the"> Make sure your phone and TV(Or wireless adapter) connect to the  </string>
    <string name="same_wifi"> &#160; same WiFi &#160; </string>
    <string name="and"> and &#160; </string>
    <string name="turn_off_vpn">turn off VPN.</string>
    <string name="enable_the">   Enable the   </string>
    <string name="miracast_display"> &#160; Miracast Display &#160; </string>
    <string name="function_on_your_tv_you_need_to_enable_it_manually_on_some_devices_go_to_system_settings_to_check">function on your TV.(You need to enable it manually on some devices, go to system settings to check).</string>
    <string name="click_the">  Click the  </string>
    <string name="start_mirroring">&#160; Start Mirroring &#160;</string>
    <string name="button_enable_the_wireless_display_function_on_your_phone_and_wait_for_the_device_searching">button, enable the wireless display function on your phone and wait for the device searching.</string>
    <string name="the_screen_casting_settings_are_not_found_on_the_device">The screen casting Settings are not found on the device</string>
    <string name="number">Number</string>
    <string name="more">More</string>
    <string name="is_your_tv_turned_on">Is your TV turned on?</string>
    <string name="your_phone_needs_to_have_a_built_in_ir_infrared_blaster">Your phone needs to have a built-in IR (infrared blaster).</string>
    <string name="there_is_no_built_in_infrared_blaster_in_your_phone_so_you_can_t_control_tv_via_ir">There is no built-in infrared blaster in your phone,so you can\'t control TV via IR</string>
    <string name="no_smart_remote_for_the_sony_tv">No smart remote for the SONY TV</string>
    <string name="maybe_later">Maybe later</string>
    <string name="please_use_wifi">Please use wifi</string>
    <string name="no_equipment">No equipment</string>
    <string name="add_remote">ADD REMOTE</string>
    <string name="cast">CAST</string>
    <string name="connecting_way">Connecting  Way</string>

    <string name="music">Music</string>
    <string name="mirroring">Mirroring</string>
    <string name="tv_cast_amp_n_stream_mirroring"><![CDATA[TV Cast & \n Stream Mirroring]]></string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="test_remote">Test remote</string>
    <string name="choose_language">Choose Language</string>
</resources>