<?xml version="1.0" encoding="utf-8"?>
<com.ruffian.library.widget.RLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:background_normal="@color/white"
    app:corner_radius="@dimen/dp_8">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/nwRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:button="@drawable/select_fb_check"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/not_working_at_all"
            android:textColor="#ff333333"
            android:textSize="@dimen/sp_14" />

        <RadioButton
            android:id="@+id/sbRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:button="@drawable/select_fb_check"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/some_buttons_are_not_responding"
            android:textColor="#ff333333"
            android:textSize="@dimen/sp_14" />

        <RadioButton
            android:id="@+id/ccRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:button="@drawable/select_fb_check"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/can_t_connect_to_tv"
            android:textColor="#ff333333"
            android:textSize="@dimen/sp_14" />

        <RadioButton
            android:id="@+id/otherRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_15"
            android:button="@drawable/select_fb_check"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/others"
            android:textColor="#ff333333"
            android:textSize="@dimen/sp_14" />


    </RadioGroup>

</com.ruffian.library.widget.RLinearLayout>