<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <com.ruffian.library.widget.RLinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:background_normal="#666666"
        app:corner_radius_top_left="@dimen/dp_20"
        app:corner_radius_top_right="@dimen/dp_20"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/closeIV"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="end"
            android:scaleType="centerInside"
            android:src="@drawable/close_w" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/cast_content_from_phone_to_your_tv"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp_16" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">


            <com.ruffian.library.widget.RTextView
                android:id="@+id/photoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_photo"
                android:drawablePadding="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/photo"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_14" />


            <com.ruffian.library.widget.RTextView
                android:id="@+id/videoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_video"
                android:drawablePadding="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/video"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_14" />


            <com.ruffian.library.widget.RTextView
                android:id="@+id/audioTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_audio"
                android:drawablePadding="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/audio"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />


            <com.ruffian.library.widget.RTextView
                android:id="@+id/imageTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_photo"
                android:drawablePadding="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/image_nonline"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/castLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_30">


            <com.ruffian.library.widget.RTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/dp_100"
                app:background_normal="#1C73FF"
                app:corner_radius="@dimen/dp_20" />


            <TextView
                android:id="@+id/screenTV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:text="@string/screen_mirroring"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/completely_duplicate_the_content_displayed_on_the_phone_screen"
                android:textColor="#ffdddddd"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/screenIV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenTV" />


            <ImageView
                android:id="@+id/screenIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/icon_screent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.ruffian.library.widget.RLinearLayout>


</layout>