<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.CastFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/tv_cast_amp_n_stream_mirroring"
            android:textStyle="bold"
            android:textColor="#e6000000"
            android:textSize="@dimen/sp_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_27"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/photoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/icon_cast_phone"
                android:gravity="center"
                android:text="@string/photo"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:id="@+id/videoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_cast_video"
                android:gravity="center"
                android:text="@string/video"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:id="@+id/musicTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_cast_music"
                android:gravity="center"
                android:text="@string/music"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/mirrorTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_cast_mirror"
                android:gravity="center"
                android:text="@string/mirroring"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_cast_video"
                android:gravity="center"
                android:text="Photo"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14"
                android:visibility="invisible" />

            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_cast_music"
                android:gravity="center"
                android:text="Photo"
                android:textColor="#e6000000"
                android:textSize="@dimen/sp_14"
                android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>

</layout>