<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.AddFragment">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_25">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.ruffian.library.widget.RLinearLayout
                android:id="@+id/remoteLin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_20"
                app:background_normal="@drawable/way_lin_bg"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_remote"
                    android:textColor="#ffffffff"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/tv_remote_control_by_mobile"
                    android:textColor="#ff999999"
                    android:textSize="10sp" />


                <com.ruffian.library.widget.RTextView
                    android:layout_width="@dimen/dp_138"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_44"
                    android:gravity="center"
                    android:text="@string/add_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:background_normal="#1C73FF"
                    app:corner_radius="@dimen/dp_20" />


            </com.ruffian.library.widget.RLinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/remote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30">


            <com.ruffian.library.widget.RLinearLayout
                android:id="@+id/screenLin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_20"
                app:background_normal="@drawable/way_lin_bg"
                app:gradient_orientation="TOP_BOTTOM"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_screen"
                    android:textColor="#ffffffff"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/cast_content_from_phone_to_your_tv"
                    android:textColor="#ff999999"
                    android:textSize="10sp" />


                <com.ruffian.library.widget.RTextView
                    android:layout_width="@dimen/dp_138"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_44"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:background_normal="#1C73FF"
                    app:corner_radius="@dimen/dp_20" />


            </com.ruffian.library.widget.RLinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>