<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.cast.SearchWifiActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <include

                    android:id="@+id/titleLin"
                    layout="@layout/include_title" />


                <LinearLayout
                    android:id="@+id/deviceLin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progressView"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_8"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/color_00A3FF"
                        android:indeterminateTintMode="src_in" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_28"
                        android:text="@string/select_device"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/sp_22" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/wifiListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:minHeight="@dimen/dp_230" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/searchLin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wifiIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_32"
                        android:background="@drawable/anim_wifi" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:background="@drawable/icon_launch_yk" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/searching_device"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/sp_22" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/current_wi_fi"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/sp_16" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_40"
                        android:layout_marginTop="@dimen/dp_8"
                        android:gravity="center"
                        android:text="@string/to_display_the_wi_fi_name_please_allow_location_access_in_settings"
                        android:textColor="#ffdddddd"
                        android:textSize="@dimen/sp_14" />


                </LinearLayout>


                <com.ruffian.library.widget.RLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_60"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:orientation="vertical"
                    app:background_normal="#4F4F4F"
                    app:corner_radius="@dimen/dp_20">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/please_make_sure"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:text="@string/turn_off_the_vpn_on_your_phone_if_it_s_connected"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="italic" />

                </com.ruffian.library.widget.RLinearLayout>


            </LinearLayout>

            <include
                android:id="@+id/netInclude"
                layout="@layout/include_net"
                android:visibility="gone" />


        </RelativeLayout>


    </ScrollView>

</layout>